name:                thread-hierarchy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nshimaza/thread-hierarchy#readme
license:             MIT
license-file:        LICENSE
author:              Naoto Shimazaki
maintainer:          Naoto.Shimazaki@gmail.com
copyright:           Copyright: (c) 2017 Naoto Shimazaki
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.Hierarchy
                     , Control.Concurrent.HierarchyInternal
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lifted-base
                     , monad-control
                     , transformers-base
  default-language:    Haskell2010

test-suite thread-hierarchy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Concurrent.HierarchySpec
  build-depends:       base
                     , containers
                     , hspec
                     , thread-hierarchy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nshimaza/thread-hierarchy
